--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -26,6 +26,7 @@
     padding: 30px;
     align-self: normal;
 }
+
 .recent-news{
     box-shadow: 0 0 15px rgb(0 0 0 / 5%);
     padding: 52px;
@@ -42,4 +43,45 @@
     width: 100%;
     height: 230px;
     object-fit: cover;
+}
+
+.card-details {
+    flex: 0 1 44rem;
+    display: flex;
+    align-items: center;
+    margin: 20px 18px 44px;
+    flex-direction: column;
+    background: #fff;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 15px rgb(0 0 0 / 5%);
+    border-radius: 15px;
+    padding: 17px 18px 17px;
+    /* padding: 30px; */
+    align-self: normal;
+}
+
+.card-details img {
+  width: 100%;
+  height: 450px;
+  /* object-fit: cover; */
+  transition: 0.5s;
+  object-position: center;
+  border-radius: 15px;
+  margin: 0 auto 25px;
+}
+
+.card-details:hover img{
+transform: scale(0.9);
+}
+
+.card-details h3{
+font-size: 18px;
+font-weight: 600;
+color: #3f3975;
+margin-bottom: 1em;
+}
+
+.card-details p{
+font-size: 14px;
+text-align: ;
 }
