--- a/public/front/css/blog.style.css
+++ b/public/front/css/blog.style.css
@@ -46,7 +46,7 @@ body.header-fixed-space-v2 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto Slab', sans-serif;
+	/* font-family: 'Roboto Slab', sans-serif; */
 }
 
 /*--------------------------------------------------
