--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -7,6 +7,14 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.row-download{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
 .row-blog{
     display: flex;
     flex-wrap: wrap;
@@ -39,6 +47,10 @@
     margin-bottom: 10px;
 }
 
+.mb-20{
+    margin-bottom: 20px;
+}
+
 .image img{
     width: 100%;
     height: 230px;
@@ -48,7 +60,7 @@
 .card-details {
     flex: 0 1 44rem;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     margin: 20px 18px 44px;
     flex-direction: column;
     background: #fff;
@@ -62,7 +74,7 @@
 
 .card-details img {
   width: 100%;
-  height: 450px;
+  height: auto;
   /* object-fit: cover; */
   transition: 0.5s;
   object-position: center;
@@ -70,9 +82,6 @@
   margin: 0 auto 25px;
 }
 
-.card-details:hover img{
-transform: scale(0.9);
-}
 
 .card-details h3{
 font-size: 18px;
@@ -83,5 +92,4 @@ margin-bottom: 1em;
 
 .card-details p{
 font-size: 14px;
-text-align: ;
 }
