--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -195,7 +195,6 @@ h6 {
   padding: 0 3px;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
-  font-weight: 600;
   color: rgb(7 7 7 / 70%);
   white-space: nowrap;
   transition: 0.3s;
@@ -880,13 +879,13 @@ section {
 
 .testimonials .testimonial-item {
   box-sizing: content-box;
-  min-height: 320px;
+  text-align: center;
 }
 
 .testimonials .testimonial-item .testimonial-img {
   width: 90px;
   border-radius: 50%;
-  margin: -40px 0 0 40px;
+  margin-bottom: 20px;
   position: relative;
   z-index: 2;
   border: 6px solid #fff;
@@ -896,14 +895,12 @@ section {
 .testimonials .testimonial-item h3 {
   font-size: 18px;
   font-weight: bold;
-  margin: 10px 0 5px 45px;
   color: #2c4964;
 }
 
 .testimonials .testimonial-item h4 {
   font-size: 14px;
   color: #999;
-  margin: 0 0 0 45px;
 }
 
 .testimonials .testimonial-item .quote-icon-left,
@@ -1825,7 +1822,7 @@ section {
   .cardpokersize img {
     width: 100%;
     height: 255px;
-    /* object-fit: cover; */
+    object-fit: cover;
     transition: 0.5s;
     object-position: center;
     border-radius: 15px;
@@ -1837,7 +1834,7 @@ section {
 }
 
 .cardpokersize h3{
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 600;
   color: #3f3975;
   margin-bottom: 1em;
