--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -2,6 +2,10 @@
     padding-top: 82px;
 }
 
+.download{
+  padding-top: 140px;
+}
+
 .container-card {
     width: 1320px;
     max-width: 100%;
@@ -56,6 +60,7 @@
     margin-bottom: 20px;
 }
 
+
 .image img{
     width: 100%;
     height: 230px;
@@ -99,8 +104,108 @@ margin-bottom: 1em;
 font-size: 14px;
 }
 
+.row-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.cardpokersize {
+  flex: 0 1 23rem;
+  display: flex;
+  align-items: center;
+  margin: 20px 18px 44px;
+  flex-direction: column;
+  background: #fff;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 0 15px rgb(0 0 0 / 5%);
+  border-radius: 15px;
+  padding: 17px 18px 17px;
+  /* padding: 30px; */
+  align-self: normal;
+}
+
+.cardpokersize img {
+width: 100%;
+height: 255px;
+object-fit: cover;
+transition: 0.5s;
+object-position: center;
+border-radius: 15px;
+margin: 0 auto 25px;
+}
+
+.cardpokersize:hover img{
+transform: scale(0.9);
+}
+
+.cardpokersize h3{
+font-size: 17px;
+font-weight: 600;
+color: #3f3975;
+margin-bottom: 1em;
+}
+.cardpokersize p{
+font-size: 14px;
+text-align: center;
+}
 
 
+/* Galeri Foto */
+
+.container-image {
+    width: 1320px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.row-image {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-image {
+  flex: 0 1 18rem;
+  display: flex;
+  align-items: center;
+  margin: 20px 18px 44px;
+  flex-direction: column;
+  background: #fff;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 0 15px rgb(0 0 0 / 5%);
+  border-radius: 15px;
+  padding: 17px 18px 17px;
+  /* padding: 30px; */
+  align-self: normal;
+}
+
+.card-image img {
+width: 100%;
+height: 210px;
+object-fit: cover;
+transition: 0.5s;
+object-position: center;
+border-radius: 10px;
+margin: 0 auto 25px;
+}
+
+.card-image:hover img{
+/* transform: scale(0.9); */
+}
+
+.card-image h3{
+font-size: 17px;
+font-weight: 600;
+color: #3f3975;
+margin-bottom: 1em;
+}
+.card-image p{
+font-size: 14px;
+text-align: center;
+}
 
 @media  (min-width: 576px){
     .container-f {
@@ -149,3 +254,57 @@ font-size: 14px;
     line-height: 35px;
     color: #1A516F;
   }
+
+
+  .gallery {
+    display: flex;
+    padding: 2px;
+    transition: 0.3s;
+  }
+  .gallery:hover .gallery__image {
+    filter: grayscale(1);
+  }
+  .gallery__column {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+  }
+  .gallery__link {
+    margin: 2px;
+    overflow: hidden;
+  }
+  .gallery__link:hover .gallery__image {
+    filter: grayscale(0);
+  }
+  .gallery__link:hover .gallery__caption {
+    opacity: 1;
+  }
+  .gallery__thumb {
+    position: relative;
+  }
+  .gallery__image {
+    display: block;
+    width: 100%;
+    transition: 0.3s;
+  }
+  .gallery__image:hover {
+    transform: scale(1.1);
+  }
+  .gallery__caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 25px 15px 15px;
+    width: 100%;
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    color: white;
+    opacity: 0;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+    transition: 0.3s;
+  }
+
+  .img-footer{
+    width: 100%;
+  }
+
