--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -8,6 +8,12 @@
 .contact{
   padding-top: 140px;
 }
+.post{
+  padding-top: 140px;
+}
+.page{
+  padding-top: 140px;
+}
 
 .container-card {
     width: 1320px;
@@ -45,6 +51,24 @@
     /* padding: 17px 18px 17px; */
     padding: 30px;
     align-self: normal;
+}
+.section-left{
+    flex: 0 1 20rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 18px 44px;
+    background: #fff;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 15px rgb(0 0 0 / 5%);
+    border-radius: 10px;
+    /* padding: 17px 18px 17px; */
+    /* padding: 30px; */
+    align-self: normal;
+}
+
+.recent-post{
+  padding: 20px;
 }
 
 .recent-news{
@@ -107,6 +131,15 @@ margin-bottom: 1em;
 font-size: 14px;
 }
 
+.blog-info{
+  list-style: none;
+  display: flex;
+  padding-left : 0rem ;
+}
+.blog-info li{
+ margin-left: 10px;
+}
+
 .row-card {
     display: flex;
     flex-wrap: wrap;
@@ -117,7 +150,7 @@ font-size: 14px;
 .cardpokersize {
   flex: 0 1 23rem;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   margin: 20px 18px 44px;
   flex-direction: column;
   background: #fff;
@@ -152,6 +185,12 @@ margin-bottom: 1em;
 .cardpokersize p{
 font-size: 14px;
 text-align: center;
+}
+.cardpokersize a{
+color: #444;
+}
+.cardpokersize a:hover{
+color: #1850ca;
 }
 
 
