--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -79,6 +79,10 @@
     margin-bottom: 20px;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 
 .image img{
     width: 100%;
@@ -104,7 +108,6 @@
 .card-details img {
   width: 100%;
   height: auto;
-  /* object-fit: cover; */
   transition: 0.5s;
   object-position: center;
   border-radius: 15px;
@@ -142,7 +145,6 @@ font-size: 14px;
 .cardpokersize {
   flex: 0 1 23rem;
   display: flex;
-  /* align-items: center; */
   margin: 20px 18px 44px;
   flex-direction: column;
   background: #fff;
@@ -150,7 +152,6 @@ font-size: 14px;
   box-shadow: 0 0 15px rgb(0 0 0 / 5%);
   border-radius: 15px;
   padding: 17px 18px 17px;
-  /* padding: 30px; */
   align-self: normal;
 }
 
@@ -158,14 +159,13 @@ font-size: 14px;
 width: 100%;
 height: 255px;
 object-fit: cover;
-transition: 0.5s;
 object-position: center;
 border-radius: 15px;
 margin: 0 auto 25px;
 }
 
-.cardpokersize:hover img{
-transform: scale(0.9);
+.cardpokersize:hover{
+  transform: translateY(-10px);
 }
 
 .cardpokersize h3{
@@ -187,7 +187,6 @@ color: #1850ca;
 
 
 /* Galeri Foto */
-
 .container-image {
     width: 1320px;
     max-width: 100%;
