--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -22,6 +22,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.hidden{
+    display: none;
+}
 
 
 
@@ -243,7 +246,7 @@ text-align: center;
        max-width: 540px;
       }
     }
-    
+
   @media  (min-width: 768px){
     .container-f {
        max-width: 720px;
@@ -295,5 +298,5 @@ text-align: center;
     max-width: 100%;
     height: auto;
 }
-  
+
 
